Last commit before review

--- a/photographer.html
+++ b/photographer.html
@@ -1,11 +1,10 @@
-<!-- // Manage the button sort  -->
 
 <!DOCTYPE html>
 <html lang="fr">
 
 <head>
-  <link href="css/style.css" rel="stylesheet" type="text/css" />
-  <link href="css/lightbox.css" rel="stylesheet" type="text/css" />
+  <link href="css/style.css" rel="stylesheet" type="text/css">
+  <link href="css/lightbox.css" rel="stylesheet" type="text/css">
   <meta charset="utf-8">
   <link rel="icon" type="image/png" href="assets/favicon.png">
   <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
@@ -19,7 +18,7 @@
 <body>
   <header>
     <a href=index.html aria-label="Liens vers la page d’accueil">
-      <img src="assets/images/logo.png" class="logo" alt="Fisheye Home page" />
+      <img src="assets/images/logo.png" class="logo" alt="Fisheye Home page">
     </a>
   </header>
   <main id="main">
@@ -27,7 +26,7 @@
     <div class="photographer_content">
       <label class="dropdown-label">Trier par</label>
       <div class="dropdown">
-        <button onclick="showDropdown()" id="dropdownButton" data-value="Popularité">Popularité</button>
+        <button onclick="showDropdown()" aria-label="Button pour trier les photos, par default le boutton est 'Popularité' " id="dropdownButton" data-value="Popularité">Popularité</button>
         <ul class="dropdown-options">
           <li class="select" data-value="Popularité" onclick="app.selectOption(this)">Popularité</li>
           <li class="select" data-value="Date" onclick="app.selectOption(this)">Date</li>
@@ -41,39 +40,39 @@
   <div id="contact_modal" class="bground">
     <div class="modal">
       <header>
-        <h2>Contactez-moi</h2>
-        <img src="assets/icons/close.svg" onclick="closeModal()" />
+        <h2  id="formName">Contactez-moi</h2>
+        <img src="assets/icons/close.svg" alt="close button image" onclick="closeModal()">
       </header>
       <form method="get">
         <div>
           <label for="firstName" id="firstNameLabel">Prénom</label>
-          <input type="text" name="firstName" id="firstName" role="textbox" aria-label="First name"
+          <input type="text" name="firstName" id="firstName" aria-label="First name"
             aria-labelledby="firstNameLabel" required="">
         </div>
         <div>
           <label for="lastName" id="lastNameLabel">Nom</label>
-          <input type="text" name="lastName" id="lastName" role="textbox" aria-label="First name"
+          <input type="text" name="lastName" id="lastName" aria-label="First name"
             aria-labelledby="firstNameLabel" required="">
         </div>
         <div>
           <label for="email" id="emailLabel">Email</label>
-          <input type="email" name="email" id="email" role="textbox" aria-label="Email" aria-labelledby="emailLabel"
+          <input type="email" name="email" id="email" aria-label="Email" aria-labelledby="emailLabel"
             required="">
         </div>
         <div>
           <label for="Message" id="yourMessageLabel">Votre message</label>
-          <textarea name="Message" id="Message" role="textbox" aria-label="Your message" aria-labelledby="MessageLabel"
-            required="" cols="82" rows="15"></textarea>
+          <textarea name="Message" id="Message" aria-label="Your message" aria-labelledby="yourMessageLabel"
+            required="" cols="86" rows="15"></textarea>
           <!-- <input /> -->
         </div>
-        <button class="contact_button">Envoyer</button>
+        <button aria-label="button pour ouvrir  le formulaire de contact" class="contact_button">Envoyer</button>
       </form>
     </div>
   </div>
   <div class="price_likes">
     <div>
       <span class="sum_likes"></span>
-      <i class="fa-solid fa-heart"></i>
+      <span class="fa-solid fa-heart"></span>
     </div>
     <div>
       <span id="rate_placeholder"></span>€ / jour
@@ -101,29 +100,7 @@
   <script src="js/utils/contactForm.js"></script>
 
   <!-- lightbox -->
-  <script src="js/utils/lightbox.js" type="module"></script>
-
-  <!-- body-scroll -->
-  <script src="js/utils/body-scroll-lock.js"></script>
-
-
-  <script>
-    // function showDropdown() {
-    //   const dropdown = document.querySelector('.dropdown ');
-    //   dropdown.onclick = function () {
-    //     dropdown.classList.toggle('activate');
-    //   }
-    // }
-
-    // function selectOption(liElement) {
-    //   const selectedValue = liElement.getAttribute("data-value");
-
-    //   const button = document.getElementById("dropdownButton");
-    //   button.innerText = selectedValue;
-    //   button.dataset.value = selectedValue
-    // }
-
-  </script>
+  <script src="js/utils/lightbox.js"></script>
 
 
 </body>
