--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 
 <head>
-  <link href="css/style.css" rel="stylesheet" type="text/css" />
+  <link href="css/style.css" rel="stylesheet" type="text/css">
   <meta charset="utf-8">
   <link rel="icon" type="image/png" href="assets/favicon.png">
   <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
@@ -16,7 +16,7 @@
 <body>
   <header>
     <a href="index.html" aria-label="Liens vers la page d’accueil">
-      <img src="assets/images/logo.png" class="logo" alt="Fisheye Home page" />
+      <img src="assets/images/logo.png" class="logo" alt="Fisheye Home page">
     </a>
     <h1 aria-label="Texte statique">Nos photographes</h1>
   </header>
