Change path of js scripts

--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
   <script src="js/factories/ContentsFactories.js"></script>
 
   <!-- Models -->
-  <script src="/js/models/Photographers.js"></script>
-  <script src="/js/models/media.js"></script>
+  <script src="js/models/Photographers.js"></script>
+  <script src="js/models/media.js"></script>
 
   <!-- Templates -->
   <script src="js/templates/HtmlCard.js"></script>
 
   <!-- Api -->
-  <script src="/js/api/Api.js"></script>
+  <script src="js/IndexHtml.js"></script>
 
   <!-- Entry point -->
   <script src="js/IndexHtml.js"></script>
