--- a/photographer.html
+++ b/photographer.html
@@ -83,18 +83,18 @@
   <script src="js/factories/ContentsFactories.js"></script>
 
   <!-- Models -->
-  <script src="/js/models/Photographers.js"></script>
-  <script src="/js/models/media.js"></script>
+  <script src="js/models/Photographers.js"></script>
+  <script src="js/models/media.js"></script>
 
   <!-- Templates -->
   <script src="js/templates/HtmlCard.js"></script>
 
 
   <!-- Api -->
-  <script src="/js/api/Api.js"></script>
+  <script src="js/api/Api.js"></script>
 
   <!-- Entry point -->
-  <script src="/js/PhotographerHtml.js"></script>
+  <script src="js/PhotographerHtml.js"></script>
 
   <!-- Contact form -->
   <script src="js/utils/contactForm.js"></script>
