--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <script src="js/templates/HtmlCard.js"></script>
 
   <!-- Api -->
-  <script src="js/IndexHtml.js"></script>
+  <script src="js/api/Api.js"></script>
 
   <!-- Entry point -->
   <script src="js/IndexHtml.js"></script>
